--- a/layout_parts/q1/css/style.css
+++ b/layout_parts/q1/css/style.css
@@ -1,5 +1,34 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
 
+.main_content {
+  margin: 0 auto;
+  width: 900px;
+  padding: 20px;
+  background-color: #eff3f4;
+}
+
+.q1_box {
+  width: 230px;
+  padding: 20px;
+  margin-left: 20px;
+  float: left;
+  background-color: #3274ae;
+}
+
+.q1_box:first-child {
+  margin-left: 0;
+}
+
+.q1_content {
+  padding: 20px;
+  border: solid 10px #022336;
+  background-color: #eaf4ff;
+}
 /* 回答はここに書いてね */
