--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -1,5 +1,36 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.clearfix {
+  content: "";
+  display: block;
+  clear: both;
+}
 
+.text_setting {
+  font-size: 18px;
+  line-height: 22px;
+  word-break: break-all;
+}
+
+.main_content {
+  margin: 0 auto;
+  width: 900px;
+  padding: 20px;
+  background-color: #eff3f4;
+}
+
+.picture {
+  margin-bottom: 10px;
+}
+
+.balloon {
+  margin-right: 20px;
+  float: left;
+}
+
+.lamp {
+  margin-left: 20px;
+  float: right;
+}
 /* 回答はここに書いてね */
