--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -1,5 +1,56 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.container {
+  background-color: #eff3f4;
+  padding: 20px;
+}
 
+.contents_box {
+  display: table;
+  width: 100%;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.contents_box:first-child {
+  margin-top: 0;
+}
+
+.content {
+  padding: 20px;
+  display: table-cell;
+}
+
+.small {
+  width: 60px;
+}
+
+.large {
+  width: 460px;
+}
+
+.orange {
+  background-color: #fdc8b8;
+}
+
+.pink {
+  background-color: #e0abd9;
+}
+
+.blue {
+  background-color: #b6d8ed;
+}
+
+.yellow {
+  background-color: #e5d32e;
+}
+
+.red {
+  background-color: #ec8f9a;
+}
+
+.green {
+  background-color: #8fdcad;
+}
 /* 回答はここに書いてね */
