--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -1,5 +1,93 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.container {
+  background-color: #ecf1f2;
+  height: 500px;
+  width: 500px;
+  margin: 0 auto;
+  position: relative;
+}
 
+.content {
+  position: absolute;
+  width: 100px;
+  line-height: 100px;
+  font-weight: bold;
+  font-size: 30px;
+  text-align: center;
+}
+
+.box1 {
+  top: 40px;
+  left: 200px;
+  z-index: 1;
+  background-color: #ffefd3;
+}
+
+.box2 {
+  top: 120px;
+  left: 280px;
+  z-index: 2;
+  background-color: #7084de;
+}
+
+.box3 {
+  top: 200px;
+  left: 360px;
+  z-index: 3;
+  background-color: #d0ecea;
+}
+
+.box4 {
+  top: 280px;
+  left: 280px;
+  z-index: 4;
+  background-color: #8b7a5e;
+}
+
+.box5 {
+  top: 360px;
+  left: 200px;
+  z-index: 5;
+  background-color: #9fd6d2;
+}
+
+.box6 {
+  top: 280px;
+  left: 120px;
+  z-index: 6;
+  background-color: #fffee4;
+}
+
+.box7 {
+  top: 200px;
+  left: 40px;
+  z-index: 7;
+  background-color: #deae70;
+}
+
+.box8 {
+  top: 120px;
+  left: 120px;
+  z-index: 8;
+  background-color: #de70cf;
+}
+
+.box8::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #ffefd3;
+  content: "";
+}
+
+.box9 {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  background-color: #2b69a3;
+}
 /* 回答はここに書いてね */
