--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -1,5 +1,64 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.transition_box {
+  width: 500px;
+  height: 333px;
+  margin: 0 auto;
+  cursor: pointer;
+  overflow: hidden;
+  position: relative;
+}
 
+.transition_picture {
+  transform: scale(1);
+  transition: all 0.5s;
+}
+
+.transition_box:hover .transition_picture {
+  transform: scale(1.5);
+}
+
+.text_box {
+  position: absolute;
+  bottom: -100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .8));
+  transition: all 0.5s;
+}
+
+.text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px;
+  color: #fff;
+  word-break: break-all;
+  box-sizing: border-box;
+}
+
+.transition_box:hover .text_box {
+  bottom: 0;
+}
+
+.loading {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  border: 10px solid #ecf1f2;
+  border-top-color: #00bcd4;
+  border-radius: 50%;
+  animation: loading 1.1s infinite linear;
+}
+
+@keyframes loading {
+  0%{}
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
 /* 回答はここに書いてね */
