--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -18,16 +18,16 @@
 }
 
 .content {
-  padding: 20px;
+  padding: 20px 0;
   display: table-cell;
 }
 
 .small {
-  width: 60px;
+  width: 100px;
 }
 
 .large {
-  width: 460px;
+  width: 500px;
 }
 
 .orange {
