--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -47,7 +47,7 @@
   padding: 10px;
 }
 
-.fixed_box {
+.position_box {
   position: relative;
 }
 
@@ -58,10 +58,6 @@
   right: 0;
   top: 0;
   bottom: 0;
-}
-
-.variable_box {
-  position: relative;
 }
 
 .variable_item {
