--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -11,7 +11,6 @@
 }
 
 .transition_picture {
-  transform: scale(1);
   transition: all 0.5s;
 }
 
@@ -55,7 +54,9 @@
 }
 
 @keyframes loading {
-  0%{}
+  0%{
+    transform: rotate(0deg);
+  }
 
   100% {
     transform: rotate(360deg);
